core/codegen/tests/ui-fail-nightly/from_form_type_errors.stderr
error[E0277]: the trait bound `Unknown: FromFormField<'_>` is not satisfied
 --> tests/ui-fail-nightly/from_form_type_errors.rs:7:12
  |
7 |     field: Unknown,
  |            ^^^^^^^ the trait `FromFormField<'_>` is not implemented for `Unknown`, which is required by `Unknown: FromForm<'r>`
  |
  = help: the following other types implement trait `FromFormField<'v>`:
            &'v [u8]
            &'v str
            Capped<&'v [u8]>
            Capped<&'v str>
            Capped<Cow<'v, str>>
            Capped<TempFile<'v>>
            Capped<std::string::String>
            Cow<'v, str>
          and $N others
  = note: required for `Unknown` to implement `FromForm<'r>`

error[E0277]: the trait bound `Unknown: FromFormField<'_>` is not satisfied
 --> tests/ui-fail-nightly/from_form_type_errors.rs:5:10
  |
5 |   #[derive(FromForm)]
  |            ^-------
  |            |
  |  __________in this derive macro expansion
  | |
6 | | struct BadType3 {
  | |_______________^ the trait `FromFormField<'_>` is not implemented for `Unknown`, which is required by `_::FromFormGeneratedContext<'r>: std::marker::Send`
  |
  = help: the following other types implement trait `FromFormField<'v>`:
            &'v [u8]
            &'v str
            Capped<&'v [u8]>
            Capped<&'v str>
            Capped<Cow<'v, str>>
            Capped<TempFile<'v>>
            Capped<std::string::String>
            Cow<'v, str>
          and $N others
  = note: required for `Unknown` to implement `FromForm<'r>`
note: required because it appears within the type `_::FromFormGeneratedContext<'r>`
 --> tests/ui-fail-nightly/from_form_type_errors.rs:6:8
  |
5 | #[derive(FromForm)]
  |          -------- in this derive macro expansion
6 | struct BadType3 {
  |        ^^^^^^^^
note: required by a bound in `rocket::form::FromForm::Context`
 --> $WORKSPACE/core/lib/src/form/from_form.rs
  |
  |     type Context: Send;
  |                   ^^^^ required by this bound in `FromForm::Context`
  = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo<usize>: FromFormField<'_>` is not satisfied
  --> tests/ui-fail-nightly/from_form_type_errors.rs:14:12
   |
14 |     field: Foo<usize>,
   |            ^^^^^^^^^^ the trait `FromFormField<'_>` is not implemented for `Foo<usize>`, which is required by `Foo<usize>: FromForm<'r>`
   |
   = help: the following other types implement trait `FromFormField<'v>`:
             &'v [u8]
             &'v str
             Capped<&'v [u8]>
             Capped<&'v str>
             Capped<Cow<'v, str>>
             Capped<TempFile<'v>>
             Capped<std::string::String>
             Cow<'v, str>
           and $N others
   = note: required for `Foo<usize>` to implement `FromForm<'r>`

error[E0277]: the trait bound `Foo<usize>: FromFormField<'_>` is not satisfied
  --> tests/ui-fail-nightly/from_form_type_errors.rs:12:10
   |
12 |   #[derive(FromForm)]
   |            ^-------
   |            |
   |  __________in this derive macro expansion
   | |
13 | | struct Other {
   | |____________^ the trait `FromFormField<'_>` is not implemented for `Foo<usize>`, which is required by `_::FromFormGeneratedContext<'r>: std::marker::Send`
   |
   = help: the following other types implement trait `FromFormField<'v>`:
             &'v [u8]
             &'v str
             Capped<&'v [u8]>
             Capped<&'v str>
             Capped<Cow<'v, str>>
             Capped<TempFile<'v>>
             Capped<std::string::String>
             Cow<'v, str>
           and $N others
   = note: required for `Foo<usize>` to implement `FromForm<'r>`
note: required because it appears within the type `_::FromFormGeneratedContext<'r>`
  --> tests/ui-fail-nightly/from_form_type_errors.rs:13:8
   |
12 | #[derive(FromForm)]
   |          -------- in this derive macro expansion
13 | struct Other {
   |        ^^^^^
note: required by a bound in `rocket::form::FromForm::Context`
  --> $WORKSPACE/core/lib/src/form/from_form.rs
   |
   |     type Context: Send;
   |                   ^^^^ required by this bound in `FromForm::Context`
   = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Unknown: FromFormField<'_>` is not satisfied
 --> tests/ui-fail-nightly/from_form_type_errors.rs:5:10
  |
5 | #[derive(FromForm)]
  |          ^^^^^^^^ the trait `FromFormField<'_>` is not implemented for `Unknown`, which is required by `Unknown: FromForm<'r>`
  |
  = help: the following other types implement trait `FromFormField<'v>`:
            &'v [u8]
            &'v str
            Capped<&'v [u8]>
            Capped<&'v str>
            Capped<Cow<'v, str>>
            Capped<TempFile<'v>>
            Capped<std::string::String>
            Cow<'v, str>
          and $N others
  = note: required for `Unknown` to implement `FromForm<'r>`
  = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Unknown: FromForm<'r>` is not satisfied
 --> tests/ui-fail-nightly/from_form_type_errors.rs:7:12
  |
7 |     field: Unknown,
  |            ^^^^^^^ the trait `FromFormField<'_>` is not implemented for `Unknown`, which is required by `Unknown: FromForm<'r>`
  |
  = help: the following other types implement trait `FromForm<'r>`:
            <(A, B) as FromForm<'v>>
            <Arc<T> as FromForm<'v>>
            <BTreeMap<K, V> as FromForm<'v>>
            <BadType3 as FromForm<'r>>
            <Contextual<'v, T> as FromForm<'v>>
            <HashMap<K, V> as FromForm<'v>>
            <Lenient<T> as FromForm<'v>>
            <Other as FromForm<'r>>
          and $N others
  = note: required for `Unknown` to implement `FromForm<'r>`

error[E0277]: the trait bound `Unknown: FromFormField<'_>` is not satisfied
 --> tests/ui-fail-nightly/from_form_type_errors.rs:7:12
  |
5 | #[derive(FromForm)]
  |          -------- in this derive macro expansion
6 | struct BadType3 {
7 |     field: Unknown,
  |            ^^^^^^^ the trait `FromFormField<'_>` is not implemented for `Unknown`, which is required by `Unknown: FromForm<'r>`
  |
  = help: the following other types implement trait `FromFormField<'v>`:
            &'v [u8]
            &'v str
            Capped<&'v [u8]>
            Capped<&'v str>
            Capped<Cow<'v, str>>
            Capped<TempFile<'v>>
            Capped<std::string::String>
            Cow<'v, str>
          and $N others
  = note: required for `Unknown` to implement `FromForm<'r>`
  = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo<usize>: FromFormField<'_>` is not satisfied
  --> tests/ui-fail-nightly/from_form_type_errors.rs:12:10
   |
12 | #[derive(FromForm)]
   |          ^^^^^^^^ the trait `FromFormField<'_>` is not implemented for `Foo<usize>`, which is required by `Foo<usize>: FromForm<'r>`
   |
   = help: the following other types implement trait `FromFormField<'v>`:
             &'v [u8]
             &'v str
             Capped<&'v [u8]>
             Capped<&'v str>
             Capped<Cow<'v, str>>
             Capped<TempFile<'v>>
             Capped<std::string::String>
             Cow<'v, str>
           and $N others
   = note: required for `Foo<usize>` to implement `FromForm<'r>`
   = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo<usize>: FromForm<'r>` is not satisfied
  --> tests/ui-fail-nightly/from_form_type_errors.rs:14:12
   |
14 |     field: Foo<usize>,
   |            ^^^^^^^^^^ the trait `FromFormField<'_>` is not implemented for `Foo<usize>`, which is required by `Foo<usize>: FromForm<'r>`
   |
   = help: the following other types implement trait `FromForm<'r>`:
             <(A, B) as FromForm<'v>>
             <Arc<T> as FromForm<'v>>
             <BTreeMap<K, V> as FromForm<'v>>
             <BadType3 as FromForm<'r>>
             <Contextual<'v, T> as FromForm<'v>>
             <HashMap<K, V> as FromForm<'v>>
             <Lenient<T> as FromForm<'v>>
             <Other as FromForm<'r>>
           and $N others
   = note: required for `Foo<usize>` to implement `FromForm<'r>`

error[E0277]: the trait bound `Foo<usize>: FromFormField<'_>` is not satisfied
  --> tests/ui-fail-nightly/from_form_type_errors.rs:14:12
   |
12 | #[derive(FromForm)]
   |          -------- in this derive macro expansion
13 | struct Other {
14 |     field: Foo<usize>,
   |            ^^^^^^^^^^ the trait `FromFormField<'_>` is not implemented for `Foo<usize>`, which is required by `Foo<usize>: FromForm<'r>`
   |
   = help: the following other types implement trait `FromFormField<'v>`:
             &'v [u8]
             &'v str
             Capped<&'v [u8]>
             Capped<&'v str>
             Capped<Cow<'v, str>>
             Capped<TempFile<'v>>
             Capped<std::string::String>
             Cow<'v, str>
           and $N others
   = note: required for `Foo<usize>` to implement `FromForm<'r>`
   = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)
